<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#1885DC"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textColor="@android:color/white"
        android:textSize="36sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" >

        <ImageView
            android:id="@+id/img_bg"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:background="#FFF"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:hint="@string/hint_username"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/login_driver"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/et_username"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/et_username"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/et_password"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_alibuybutton"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_borrow"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/button_login"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_alibuybutton"
            android:onClick="borrowBook"
            android:text="@string/bookborrow"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bookdetail"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/spinner1"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_alibuybutton"
            android:onClick="borrow"
            android:text="@string/BookDetail"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/button_borrow"
            android:layout_marginTop="5dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="338dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="让你借书时间最大化的APP"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>